# R2D3_ros2

./: .gitignore  AGENTS.md  CLAUDE.md  ISAAC_SIM.md  README.md  droid  frames.gv  pyproject.toml  requirements.txt  simulation_quickstart.md  simulation_quickstart_gz.md  simulation_quickstart_mujoco.md
r2d3_humble_bridge/: package.xml  setup.cfg  setup.py
r2d3_humble_bridge/r2d3_humble_bridge/: __init__.py  bridge.py  topics.py
r2d3_model/: package.xml  setup.cfg  setup.py
r2d3_model/r2d3_model/: __init__.py  policy.py  r2d3_model.py
r2d3_model/r2d3_model/example_policies/: __init__.py  idle.py
r2d3_model/test/: test_lifecycle.py
r2d3_model_interfaces/: CMakeLists.txt  package.xml
r2d3_model_interfaces/msg/: Observation.msg
r2d3_mujoco/: CMakeLists.txt  SPIKE_NOTES.md  package.xml
r2d3_mujoco/config/: controllers_65b.yaml  controllers_75b.yaml
r2d3_mujoco/launch/: bringup_sim.launch.py  mujoco_sim.launch.py
r2d3_mujoco/scripts/: ensure_mjcf.py  wait_for_sim_ready.py
r2d3_mujoco/test/: test_camera_optical_frame.py  test_ensure_mjcf.py  test_wait_for_sim_ready.py
r2d3_mujoco/urdf/: mujoco_inputs.urdf.xacro  r2d3_mujoco.urdf.xacro
r2d3_mujoco/urdf/ros2_control/: mujoco_ros2_control.urdf.xacro
r2d3_mujoco/worlds/: nav_empty.xml
r2d3_task_interfaces/: CMakeLists.txt  package.xml
r2d3_task_interfaces/action/: RunTask.action
ros2_r2d3_apps/r2d3_bringup/: CMakeLists.txt  package.xml
ros2_r2d3_apps/r2d3_bringup/config/: zed2_params.yaml
ros2_r2d3_apps/r2d3_bringup/launch/: bringup_sim.launch.py  moveit_sim.launch.py  zed2.launch.py
ros2_r2d3_apps/r2d3_bringup/rviz/: nav2_moveit_view.rviz
ros2_r2d3_apps/r2d3_test_nodes/: CMakeLists.txt  package.xml
ros2_r2d3_apps/r2d3_test_nodes/include/r2d3_test_nodes/: test_agv_motion.hpp  test_arm_motion.hpp
ros2_r2d3_apps/r2d3_test_nodes/src/: test_agv_motion.cpp  test_arm_motion.cpp
ros2_rm_robot/dual_rm_description/dual_rm_description/: CMakeLists.txt  package.xml
ros2_rm_robot/dual_rm_description/dual_rm_description/config/: wrist_cameras.yaml
ros2_rm_robot/dual_rm_description/dual_rm_description/launch/: display.launch.py
ros2_rm_robot/dual_rm_description/dual_rm_description/urdf/: r2d3_description.urdf.xacro
ros2_rm_robot/dual_rm_navigation/: CMakeLists.txt  package.xml
ros2_rm_robot/dual_rm_navigation/config/: controllers_75b.yaml  gz_bridge.yaml  nav2_params.yaml  rtabmap_depth_only_params.yaml  rtabmap_params.yaml  slam_toolbox_params.yaml
ros2_rm_robot/dual_rm_navigation/launch/: agv_nav.launch.py  agv_navigation.launch.py  agv_rtab_map.launch.py  agv_slam.launch.py  bringup_sim.launch.py  gz_sim.launch.py  localization.launch.py  navigation.launch.py  rtabmap.launch.py  rtabmap_depth_only.launch.py  slam.launch.py  teleop_twist_keyboard.launch.py
ros2_rm_robot/dual_rm_navigation/rviz/: nav2_view.rviz  navigation.rviz
ros2_rm_robot/dual_rm_navigation/urdf/: r2d3_65b_nav_sim.urdf.xacro  r2d3_75b_nav_sim.urdf.xacro
ros2_rm_robot/dual_rm_navigation/worlds/: nav_empty.sdf
ros2_rm_robot/dual_rm_simulation/: CMakeLists.txt  package.xml
ros2_rm_robot/dual_rm_simulation/config/: controllers_65b.yaml  controllers_75b.yaml  fastdds_no_shm.xml  gz_bridge.yaml
ros2_rm_robot/dual_rm_simulation/dual_rm_65b_gazebo/: CMakeLists.txt  package.xml
ros2_rm_robot/dual_rm_simulation/dual_rm_65b_gazebo/config/: ekf.yaml
ros2_rm_robot/dual_rm_simulation/dual_rm_65b_gazebo/launch/: dual_rm_65b_gazebo.launch.py
ros2_rm_robot/dual_rm_simulation/dual_rm_65b_gazebo/urdf/: depth_camera_65b_gazebo.xacro  dual_arm_65b_sim.ros2_control.xacro  dual_rm_65b_gazebo.urdf.xacro  dual_rm_65b_sim.ros2_control.xacro  hand_gazebo.xacro
ros2_rm_robot/dual_rm_simulation/dual_rm_65b_gazebo/worlds/: rm.world
ros2_rm_robot/dual_rm_simulation/dual_rm_75b_gazebo/: CMakeLists.txt  package.xml
ros2_rm_robot/dual_rm_simulation/launch/: gz_sim.launch.py
ros2_rm_robot/dual_rm_simulation/scripts/: stereo_concat.py
ros2_rm_robot/dual_rm_simulation/test/: test_gz_camera_bore.py  test_stereo_concat.py  test_world_materials.py  test_wrist_camera_mount.py
ros2_rm_robot/dual_rm_simulation/urdf/: r2d3_65b_sim.urdf.xacro  r2d3_75b_sim.urdf.xacro  r2d3_sim.urdf.xacro
ros2_rm_robot/dual_rm_simulation/urdf/gazebo/: sim_gazebo.urdf.xacro
ros2_rm_robot/dual_rm_simulation/worlds/: nav_empty.sdf
woosh_msgs/woosh_action_msgs/: CMakeLists.txt  package.xml
woosh_msgs/woosh_action_msgs/msg/: Order.msg  State.msg  Type.msg
woosh_msgs/woosh_common_msgs/: CMakeLists.txt  package.xml
woosh_msgs/woosh_common_msgs/msg/: FileData.msg  Twist.msg
woosh_msgs/woosh_nav_msgs/: CMakeLists.txt  package.xml
woosh_msgs/woosh_nav_msgs/msg/: ArrType.msg  Mode.msg  ModeSetting.msg  Path.msg  PlanPath.msg  PlanPathOptimal.msg
woosh_msgs/woosh_robot_msgs/: CMakeLists.txt  package.xml
woosh_msgs/woosh_robot_msgs/action/: ExecTask.action
woosh_msgs/woosh_robot_msgs/msg/: AutoCharge.msg  AutoPark.msg  Battery.msg  BatteryChargeState.msg  ControlMode.msg  DeviceState.msg  DeviceStateHardwareBit.msg  DeviceStateSoftwareBit.msg  ExecPreTaskArg.msg  ExecTask.msg  FootPrint.msg  General.msg  GeneralModelData.msg  GeneralVersion.msg  GoodsCheck.msg  Identity.msg  Mode.msg  Model.msg  NavPath.msg  Network.msg  NetworkWiFi.msg  NetworkWiFiMode.msg  OperationState.msg  OperationStateNavBit.msg  OperationStateRobotBit.msg  PlanPath.msg  PoseSpeed.msg  Power.msg  RobotInfo.msg  RobotState.msg  ScannerData.msg  Scene.msg  Server.msg  Setting.msg  SettingAllow.msg  Sound.msg  State.msg  TaskProc.msg  TaskProcAction.msg  Twist.msg  (+2 more)
woosh_msgs/woosh_robot_msgs/srv/: ExecPreTask.srv  RobotInfo.srv
woosh_msgs/woosh_ros_msgs/: CMakeLists.txt  package.xml
woosh_msgs/woosh_ros_msgs/action/: LiftControl.action  LiftControl3.action  MoveBase.action  StepControl.action
woosh_msgs/woosh_ros_msgs/msg/: ControlAction.msg  Feedback.msg  LiftControl.msg  LiftControl3.msg  LiftControl3ExecuteMode.msg  LiftControlExecuteMode.msg  MoveBase.msg  MoveBaseExecutionMode.msg  State.msg  StepControl.msg  StepControlStep.msg  StepControlStepMode.msg
(+338 files in other folders)
