<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2d3_model</name>
  <version>0.1.0</version>
  <description>
    Participant-facing template package for R2D3 V1 Isaac Sim submissions.
    Provides a ROS2 Lifecycle Node that hosts the RunTask action server,
    subscribes to /r2d3/observations, and dispatches to a Python policy
    class chosen via the `policy` parameter (à la aic_model).

    Participants implement their solution by subclassing r2d3_model.policy.Policy
    and pointing the `policy` parameter at their module.
  </description>
  <maintainer email="semathew@andrew.cmu.edu">Sam Mathew</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>rm_ros_interfaces</exec_depend>
  <exec_depend>r2d3_task_interfaces</exec_depend>
  <exec_depend>r2d3_model_interfaces</exec_depend>

  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
