<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2d3_model_interfaces</name>
  <version>0.1.0</version>
  <description>
    ROS2 message definitions exposed TO the participant policy by the R2D3
    Isaac Sim adapter. Currently just Observation.msg, which bundles head
    camera streams, joint state, per-arm state, and optional wrist wrenches
    into a single subscription.
  </description>
  <maintainer email="semathew@andrew.cmu.edu">Sam Mathew</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>rm_ros_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
