<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2d3_mujoco</name>
  <version>0.1.0</version>
  <description>MuJoCo simulation backend for the R2D3 dual-arm mobile robot (mirrors dual_rm_simulation)</description>
  <maintainer email="rk.sampreeth@gmail.com">SampreethRadhaKrishna</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Robot description -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>dual_rm_description</exec_depend>
  <exec_depend>dual_rm_simulation</exec_depend>  <!-- reuses its sensor xacros (lidar/imu/camera frames) -->

  <!-- ros2_control -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>diff_drive_controller</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>imu_sensor_broadcaster</exec_depend>

  <!-- MuJoCo -->
  <exec_depend>mujoco_ros2_control</exec_depend>

  <!-- Point cloud from depth image -->
  <exec_depend>depth_image_proc</exec_depend>

  <!-- Bringup reuse (nav + moveit wiring) -->
  <exec_depend>dual_rm_navigation</exec_depend>
  <exec_depend>r2d3_bringup</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
